--- a/client/app/views/main.html
+++ b/client/app/views/main.html
@@ -1,4 +1,4 @@
-<div class="jumbotron">
+<div>
   <h1 class="text-left">Get vehicle information from DVLA</h1>
 
 <div class="row marketing text-left">
